--- a/.config.example
+++ b/.config.example
@@ -130,11 +130,13 @@ GistsPath   = ~/Gists                                   # folder for git gists
 #                                                                              #
 # api tokens                                                                   #
 #                                                                              #
+# GitHubGHIAPIToken -> used for ghi to manage issues from the cli              #
 # GitHubHomebrewAPIToken -> used for brew                                      #
 # SlackAPIToken -> used for slackcat                                           #
 #                                                                              #
 ################################################################################
 
+GitHubGHIAPIToken = 1234567890abcdefghijklmnopqrstuvwxyz
 GitHubHomebrewAPIToken = 1234567890abcdefghijklmnopqrstuvwxyz
 SlackAPIToken = 1234-12345678901-12345678901-123456789012-12345678901234567890123456789012
 
