Add jira cli templates

--- a/dotfiles/jira.d/config.yml
+++ b/dotfiles/jira.d/config.yml
@@ -1,3 +1,6 @@
 endpoint: {{ JiraEndpoint }}
 user: {{ JiraUsername }}
+assignee: {{ JiraUsername }}
+project: {{ JiraDefProject }}
 password-source: keyring
+#template: table
