--- a/.config.example
+++ b/.config.example
@@ -80,18 +80,21 @@ DefaultEmailAccount = client
 DefaultEmailAddress = cody@exchange.com
 
 # expected to be a gmail account ('home' account)
+HomeEmailSmtp       = smtp.gmail.com
 HomeEmailHost       = imap.gmail.com            # host and 'name' field in keychain
 HomeEmailKeychain   = cody+mutt@codybuell.com   # 'account' field in keychain
 HomeEmailUsername   = cody@codybuell.com
 HomeEmailAddress    = cody@codybuell.com
 
 # expected to be a gmail account ('work' account)
+WorkEmailSmtp       = smtp.gmail.com
 WorkEmailHost       = imap.gmail.com            # host and 'name' field in keychain
 WorkEmailKeychain   = cody+mutt@workplace.com   # 'account' field in keychain
 WorkEmailUsername   = cody@workplace.com
 WorkEmailAddress    = cody@workplace.com
 
 # expected to be an exchange account ('client' account)
+ClientEmailSmtp     = smtp.exchange.com
 ClientEmailHost     = imap.exchange.com         # host and 'name' field in keychain
 ClientEmailKeychain = cody+mutt@exchange.com    # 'account' field in keychain
 ClientEmailUsername = cody@exchange.com
