--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -16,15 +16,15 @@ set -sg escape-time 0
 # remap prefix
 unbind-key C-b
 set -g prefix C-Space
-bind Space send-prefix
+bind-key Space send-prefix
 
 # use shift-arrow keys (left and right) to rotate panes
-bind -n S-Right select-pane -t :.+
-bind -n S-Left select-pane -t :.-
+bind-key -n S-Right select-pane -t :.+
+bind-key -n S-Left select-pane -t :.-
 
 # use shift-arrow keys (up and down) to rotate windows
-bind -n S-Up next-window
-bind -n S-Down previous-window
+bind-key -n S-Up next-window
+bind-key -n S-Down previous-window
 
 # use vi navigation and search in scroll mode ctrl-b [
 setw -g mode-keys vi
@@ -33,11 +33,11 @@ bind-key -T edit-mode-vi Up send-keys -X history-up
 bind-key -T edit-mode-vi Down send-keys -X history-down
 
 # pre-defined sessions ctrl-b [N]
-bind A source-file ~/.tmux/administration
-bind D source-file ~/.tmux/development
-bind L source-file ~/.tmux/logs
-bind G source-file ~/.tmux/gifcast
-bind W source-file ~/.tmux/work
+bind-key A source-file ~/.tmux/administration
+bind-key D source-file ~/.tmux/development
+bind-key L source-file ~/.tmux/logs
+bind-key G source-file ~/.tmux/gifcast
+bind-key W source-file ~/.tmux/work
 
 ################################################################################
 #                                                                              #
@@ -161,10 +161,10 @@ set -g pane-base-index 1
  set -g set-titles on
 
 # reload config file with ctrl-b r
-bind r source-file ~/.tmux.conf
+bind-key r source-file ~/.tmux.conf
 
 # toggle synchronize panes
-bind S set-window-option synchronize-panes
+bind-key S set-window-option synchronize-panes
 
 # define the window title format
 set -g set-titles-string "#T : #h > #S > #W"
