--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "dotfiles/vim/bundle/vim-markdown"]
 	path = dotfiles/vim/bundle/vim-markdown
 	url = https://github.com/codybuell/vim-markdown.git
+[submodule "dotfiles/vim/bundle/w3m.vim"]
+	path = dotfiles/vim/bundle/w3m.vim
+	url = https://github.com/yuratomo/w3m.vim.git
