--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,9 @@
 [submodule "dotfiles/vim/bundle/lbdbq"]
 	path = dotfiles/vim/bundle/lbdbq
 	url = https://github.com/vim-scripts/lbdbq.git
+[submodule "dotfiles/zsh/zsh-autosuggestions"]
+	path = dotfiles/zsh/zsh-autosuggestions
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
+[submodule "dotfiles/zsh/zsh-syntax-highlighting"]
+	path = dotfiles/zsh/zsh-syntax-highlighting
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
