--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -57,6 +57,7 @@ set -w -g window-status-current-fg colour1
 set -g status-bg colour18
 set -g status-fg colour245
 set -g status-bg colour18
+set -g pane-border-bg default
 set -g pane-active-border-fg colour1
 
 ################################################################################
