Open splits in the same working directory

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -39,6 +39,10 @@ bind-key L source-file ~/.tmux/logs
 bind-key G source-file ~/.tmux/gifcast
 bind-key W source-file ~/.tmux/work
 
+# rebind splits so that they open with the same dir
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
 ################################################################################
 #                                                                              #
 #  COLORS                                                                      #
