--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -60,7 +60,6 @@ set -ga terminal-overrides ',xterm-256color:Tc'
 set -w -g window-status-current-fg colour1
 set -g status-bg colour18
 set -g status-fg colour245
-set -g status-bg colour18
 set -g pane-border-bg default
 set -g pane-active-border-fg colour1
 
@@ -191,7 +190,7 @@ set -g window-status-separator "  "
 # flag activity in the window list
 setw -g monitor-activity on
 setw -g window-status-activity-attr none
-setw -g window-status-activity-bg '#333333'
+setw -g window-status-activity-bg colour18
 setw -g window-status-activity-fg yellow
 
 ################################################################################
