--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,8 +1,32 @@
 ################################################################################
 #                                                                              #
+# ENVIRONMENT DETECTION                                                        #
+#                                                                              #
+# Set some variables based on the os / terminal running.                       #
+#                                                                              #
+################################################################################
+
+# if enterprise linux family ($DISTRO set in ~/.shell/exports)
+if-shell 'if [[ "`echo $DISTRO`" = "entlinux" ]]; then true; else false; fi' \
+  'TMUX_COPY_COMMAND="xclip"'
+
+# if debian linux family ($DISTRO set in ~/.shell/exports)
+if-shell 'if [[ "`echo $DISTRO`" = "deblinux" ]]; then true; else false; fi' \
+  'TMUX_COPY_COMMAND="xclip"'
+
+# if osx ($DISTRO set in ~/.shell/exports)
+if-shell 'if [[ "`echo $DISTRO`" = "osx" ]]; then true; else false; fi' \
+  'TMUX_COPY_COMMAND="reattach-to-user-namespace pbcopy"'
+
+################################################################################
+#                                                                              #
 # GENERAL CONFIGS                                                              #
 #                                                                              #
 ################################################################################
+
+# stop printing gibberish at the end of mouse drag due to lack of
+# mouse utf8 support in gnome terminal https://github.com/tmux/tmux/issues/816
+set-option -g set-clipboard off
 
 # dont wait for escape key as part of a key sequence
 set -sg escape-time 0
@@ -118,10 +142,11 @@ bind-key -T copy-mode-vi Escape send-keys -X cancel
 # copy methods for selected text
 unbind-key -T copy-mode-vi DoubleClick1Pane
 #unbind-key -T copy-mode-vi TripleClick1Pane
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t{mouse} -X select-word\; send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
-#bind-key -T copy-mode-vi TripleClick1Pane send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+
+bind-key -T copy-mode-vi y send-keys -X copy-pipe $TMUX_COPY_COMMAND
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe $TMUX_COPY_COMMAND
+bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t{mouse} -X select-word\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
+#bind-key -T copy-mode-vi TripleClick1Pane send-keys -X copy-pipe $TMUX_COPY_COMMAND
 
 # middle click exit copy mode and paste, in normal mode paste
 unbind-key -T root MouseUp2Pane
@@ -130,11 +155,11 @@ bind-key -T root MouseUp2Pane paste-buffer
 bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
 
 # alternative if you want to exit copy mode after pressing y or selecting
-#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel $TMUX_COPY_COMMAND
+#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel $TMUX_COPY_COMMAND
 
 # Make double and triple click work outside of copy mode (already works inside it with default bindings).
-bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-word; send-keys -X copy-pipe \"reattach-to-user-namespace pbcopy\""
+bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-word; send-keys -X copy-pipe $TMUX_COPY_COMMAND"
 bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-line"
 
 # mouse copy to system clipboard (linux only)
