--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "dotfiles/zsh/zsh-syntax-highlighting"]
 	path = dotfiles/shell/zsh-syntax-highlighting
 	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
+[submodule "dotfiles/vim/bundle/gist-vim"]
+	path = dotfiles/vim/bundle/gist-vim
+	url = https://github.com/mattn/gist-vim.git
