--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "dotfiles/vim/bundle/gist-vim"]
 	path = dotfiles/vim/bundle/gist-vim
 	url = https://github.com/mattn/gist-vim.git
+[submodule "dotfiles/vim/bundle/webapi-vim"]
+	path = dotfiles/vim/bundle/webapi-vim
+	url = https://github.com/mattn/webapi-vim
