--- a/.config.example
+++ b/.config.example
@@ -52,9 +52,10 @@ SYMLINK05 = /usr/local/bin/neomutt /usr/local/bin/mutt
 #                                                                              #
 ################################################################################
 
-Name       = Cody Buell                                # your full name
-Email      = cody@codybuell.com                        # preferred email
-OSUsername = codybuell                                 # your system username
+Name       = Cody Buell                        # your full name
+Email      = cody@codybuell.com                # preferred email
+OSUsername = codybuell                         # your system username
+OSHomeRoot = /home/                            # linux -> /home/, osx -> /Users/
 IRCNick    = codybuell
 
 ################################################################################
