--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "submodules/base16-shell"]
 	path = submodules/base16-shell
 	url = https://github.com/chriskempson/base16-shell.git
+	ignore = dirty
 [submodule "submodules/zsh-autosuggestions"]
 	path = submodules/zsh-autosuggestions
 	url = https://github.com/zsh-users/zsh-autosuggestions.git
