Fix double and triple click copy selections

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -139,31 +139,35 @@ bind-key -T root WheelDownPane \
 unbind-key -T copy-mode-vi MouseDragEnd1Pane
 bind-key -T copy-mode-vi Escape send-keys -X cancel
 
-# copy methods for selected text
-unbind-key -T copy-mode-vi DoubleClick1Pane
-#unbind-key -T copy-mode-vi TripleClick1Pane
-
+# press y in copy mode to copy selection to clipboard
 bind-key -T copy-mode-vi y send-keys -X copy-pipe $TMUX_COPY_COMMAND
+
+# copy selected text at the end of a mouse click and drag selection
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe $TMUX_COPY_COMMAND
+
+# unbind all double and tripple clicks
+unbind-key -T copy-mode-vi DoubleClick1Pane
+unbind-key -T copy-mode-vi TripleClick1Pane
+unbind-key -T root DoubleClick1Pane
+unbind-key -T root TripleClick1Pane
+unbind-key -T copy-mode DoubleClick1Pane
+unbind-key -T copy-mode TripleClick1Pane
+
+# copy selected text after a double or triple click initiated while in vi copy mode
+# use copy-pipe-and-cancel instead of copy-pipe if you want to exit after selection
 bind-key -T copy-mode-vi DoubleClick1Pane send-keys -t{mouse} -X select-word\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
-#bind-key -T copy-mode-vi TripleClick1Pane send-keys -X copy-pipe $TMUX_COPY_COMMAND
+bind-key -T copy-mode-vi TripleClick1Pane send-keys -t{mouse} -X select-line\; send-keys -X copy-pipe $TMUX_COPY_COMMAND
+
+# do the same for double and triple clicks when not in vi copy mode
+# use copy-pipe-and-cancel instead of copy-pipe if you want to exit after selection
+bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-word; send-keys -t{mouse} -X copy-pipe \"$TMUX_COPY_COMMAND\""
+bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-line; send-keys -t{mouse} -X copy-pipe \"$TMUX_COPY_COMMAND\""
 
 # middle click exit copy mode and paste, in normal mode paste
 unbind-key -T root MouseUp2Pane
 unbind-key -T copy-mode-vi MouseUp2Pane
 bind-key -T root MouseUp2Pane paste-buffer
 bind-key -T copy-mode-vi MouseUp2Pane send-keys -X cancel\; paste-buffer
-
-# alternative if you want to exit copy mode after pressing y or selecting
-#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel $TMUX_COPY_COMMAND
-#bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel $TMUX_COPY_COMMAND
-
-# Make double and triple click work outside of copy mode (already works inside it with default bindings).
-bind-key -T root DoubleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-word; send-keys -X copy-pipe $TMUX_COPY_COMMAND"
-bind-key -T root TripleClick1Pane if-shell -Ft{mouse} '#{alternate_on}' "send-keys -M" "copy-mode -t{mouse}; send-keys -t{mouse} -X select-line"
-
-# mouse copy to system clipboard (linux only)
-#bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "xclip -in -selection clipboard"
 
 # scroll 3 lines at a time instead of default 5; don't extend dragged selections
 bind-key -T copy-mode-vi WheelUpPane select-pane\; send-keys -t{mouse} -X clear-selection\; send-keys -t{mouse} -X -N 3 scroll-up
